Started regenrating the tutorial with Java code